<resources>
    <string name="app_name">Submission Story App</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_error">Please enter a valid email address</string>
    <string name="login_picture">Login Picture</string>
    <string name="description">Description</string>
    <string name="story_image">Story Image</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="ask_account">Doesn\'t have account?</string>
    <string name="createdat">CreatedAt</string>
    <string name="description_content">Description Content</string>
    <string name="new_image_story">New Image Story</string>
    <string name="galeri">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="add_description">Add Description</string>
    <string name="empty_login_form">Email and password still empty</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="language">Language</string>
    <string name="log_out">Log Out</string>
    <string name="success_logout">Log Out Success</string>
    <string name="password_less_than_6">The password must have at least 6 characters</string>
    <string name="have_account">Already have account?</string>
    <string name="fields_empty_msg">You must fill in all of the fields</string>
    <string name="detail_story">Detail Story</string>
    <string name="home">Home</string>
    <string name="add_story">Add Story</string>
    <string name="title_activity_maps">Story Maps</string>
    <string name="story_maps">Story Maps</string>
    <string name="retry">Try Again</string>
</resources>