<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/img_add_story"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/new_image_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        app:layout_constraintStart_toStartOf="@+id/img_add_story"
        app:layout_constraintTop_toBottomOf="@+id/img_add_story"
        app:layout_constraintEnd_toStartOf="@+id/btn_galeri"
        android:layout_marginTop="14dp"/>

    <Button
        android:id="@+id/btn_galeri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="@+id/img_add_story"
        app:layout_constraintStart_toEndOf="@+id/btn_camera"
        app:layout_constraintTop_toTopOf="@+id/btn_camera"
        android:text="@string/galeri"/>

    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        app:layout_constraintStart_toStartOf="@+id/img_add_story"
        app:layout_constraintEnd_toEndOf="@+id/img_add_story"
        android:autofillHints="@string/add_description"
        android:hint="@string/add_description"
        android:singleLine="false"
        android:gravity="top"
        android:padding="10dp"
        android:layout_marginVertical="18dp"
        android:background="@drawable/text_container"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_description"
        app:layout_constraintStart_toStartOf="@+id/edit_text_description"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_description"
        android:layout_marginTop="12dp"
        android:text="@string/upload"
        android:textStyle="bold"
        android:background="@drawable/text_container"
        />

</androidx.constraintlayout.widget.ConstraintLayout>