<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/img_story_detail"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="24dp"
        android:transitionName="Image"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/story_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_story_detail"
        android:background="@drawable/text_container"
        android:paddingHorizontal="14dp"
        android:paddingVertical="4dp"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="14dp"/>

    <TextView
        android:id="@+id/date_created_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/createdat"
        android:textSize="18sp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/img_story_detail"
        app:layout_constraintStart_toStartOf="@+id/img_story_detail"
        app:layout_constraintTop_toBottomOf="@+id/date_created_story"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/description_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description_content"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="@+id/img_story_detail"
        app:layout_constraintEnd_toEndOf="@+id/img_story_detail"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>